#2 homepage slider should go a bit faster - Done #3 About us: all about mr. lowy inner page title should be: About Mr. Lowy - Done New url for page - http://localhost/dov/git/wordpress/alterseventsdev/about-mr-lowy/ #4 Beauty tips: remove letter spacing from post titles - Done  #6 contact page: add address and phone number to contact form and footer - Done #7 Why Us: when clicking read more, page scrolls to top. Fix so that it stays where it is and expanded section is in focus - Done

--- a/wp-content/themes/custom-theme/style.css
+++ b/wp-content/themes/custom-theme/style.css
@@ -162,8 +162,7 @@ a:hover, a:active { outline: 0; }
 }
 .beauty-text-italic{
     font-family: 'alters-italic';
-    font-size: 38px;
-    letter-spacing: 6px;
+    font-size: 38px;    
     margin: 0px !important;
     position: relative;
     top: 12px;
@@ -2159,4 +2158,7 @@ input#form-submit {
 }
 .nks_cc_trigger_tabs .ncf-tab-icon:after{
       background-color: rgb(0, 0, 0) !important;
+}
+a:hover, a:focus{
+  color:#337ab7 !important;
 }
